classDiagram
    class AACommandsFiller {
        +onEnable() void
        +onDisable() void
    }

    class ConfigHelper {
        -FileConfiguration config
        +ConfigHelper(config: FileConfiguration)
        +isCommandEnabled(pathParts: String[]) boolean
        +getPermissions(pathParts: String[]) List~String~
        +getSubCommands(pathParts: String[]) List~String~
        +getBaseCommand() String
    }

    class PermissionValidator {
        -ConfigHelper configHelper
        +PermissionValidator(configHelper: ConfigHelper)
        +hasPermission(sender: CommandSender, pathParts: String[]) boolean
    }

    class CommandHandler {
        -ConfigHelper configHelper
        -PermissionValidator permissionValidator
        -String baseCommand
        +CommandHandler(configHelper: ConfigHelper, permissionValidator: PermissionValidator, baseCommand: String)
        +handleCommand(sender: CommandSender, commandName: String, args: String[]) boolean
    }

    class TabCompleteHandler {
        -ConfigHelper configHelper
        -PermissionValidator permissionValidator
        -String baseCommand
        +TabCompleteHandler(configHelper: ConfigHelper, permissionValidator: PermissionValidator, baseCommand: String)
        +handleTabComplete(sender: CommandSender, commandName: String, args: String[]) List~String~
        -isPlaceholder(subCommand: String) boolean
        -findMatchingPlaceholder(arg: String, availableSubCommands: List~String~) String
        -matchesPlaceholder(arg: String, placeholder: String) boolean
    }

    class CommandManager {
        -JavaPlugin plugin
        -CommandHandler commandHandler
        -TabCompleteHandler tabCompleteHandler
        +CommandManager(plugin: JavaPlugin, commandHandler: CommandHandler, tabCompleteHandler: TabCompleteHandler)
        +registerCommand(baseCommand: String) void
    }

    AACommandsFiller "1" --> "1" ConfigHelper : creates
    AACommandsFiller "1" --> "1" PermissionValidator : creates
    AACommandsFiller "1" --> "1" CommandHandler : creates
    AACommandsFiller "1" --> "1" TabCompleteHandler : creates
    AACommandsFiller "1" --> "1" CommandManager : creates
    
    PermissionValidator "1" --> "1" ConfigHelper : uses
    
    CommandHandler "1" --> "1" ConfigHelper : uses
    CommandHandler "1" --> "1" PermissionValidator : uses
    
    TabCompleteHandler "1" --> "1" ConfigHelper : uses
    TabCompleteHandler "1" --> "1" PermissionValidator : uses
    
    CommandManager "1" --> "1" CommandHandler : uses
    CommandManager "1" --> "1" TabCompleteHandler : uses
